--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-outside-click-handler": "^1.3.0",
     "bootstrap": "5.1.0",
     "firebase": "^9.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
